<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="register_for_user">Register for User</string>
    <string name="email">Email</string>
    <string name="store_name">Store Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="save_information">Save Information</string>
    <string name="logout">Logout</string>
    <string name="store_registration">Store Registration</string>
    <string name="already_have_account_sign_in_here">Already have account? Sign In here</string>
    <string name="register_for_store">Register for Store</string>
    <string name="full_name">Full Name</string>
    <string name="user_registration">User Registration</string>
    <string name="capacity">Capacity of Store</string>
    <string name="sunday">Su</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="business_hours">Business Hours:</string>
    <string name="open_drawer">Open Menu</string>
    <string name="close_drawer">Close Menu</string>
    <string name="title_activity_maps">Map</string>
    <string name="choose_image">choose image</string>
    <string name="about_store">Add \'about your store\' here</string>
    <string name="tv_about_store">About Store:</string>
    <string name="choose_Location">choose location</string>
    <string name="store_s_profile_picture">Store\'s profile picture</string>
    <string name="edit_profile">edit profile</string>
    <string name="profile">Profile</string>
    <string name="select_store">Select Store</string>
    <string name="name">Name</string>
    <string name="user_s_profile_picture">User\'s Profile Picture</string>
    <string name="confirm">Confirm</string>
    <string name="date_picker">Pick date</string>
    <string name="number_of_people">Number of people</string>
    <string name="store_day">Day</string>
    <string name="store_time">Time</string>
    <string name="store_phone">Phone</string>
    <string name="store_address">address</string>
    <string name="store_about">about</string>
    <string name="reserve_time">Reserve time</string>
    <string name="amount">Amount</string>
    <string name="time">Time</string>
    <string name="reserve_date">Reserve date</string>
    <string name="user_name">user name</string>
</resources>
