<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.beam.firebaseauth.StoreEditProfileActivity">
    <!--content-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvStoreEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/email" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/store_s_profile_picture"
                    android:src="@mipmap/defualtphotos" />

            </LinearLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/green"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:gravity="center_horizontal"
                        android:text="@string/store_name"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvStoreName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:background="@color/white" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:gravity="center_horizontal"
                        android:text="@string/phone_number"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvStorePhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:background="@color/white" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:gravity="center_horizontal"
                        android:text="@string/capacity"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvStoreCap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:background="@color/white" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/tv_about_store"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/editTextAboutStore"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/about_store"
                    android:textSize="20sp" />
            </LinearLayout>


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/business_hours"
                android:textSize="20sp" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/openTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/open"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/closeTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/close"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/sunday" />

                <CheckBox
                    android:id="@+id/monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/wednesday" />

                <CheckBox
                    android:id="@+id/thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/thursday" />

                <CheckBox
                    android:id="@+id/friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/friday" />

                <CheckBox
                    android:id="@+id/saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/saturday" />

            </LinearLayout>


            <TextView
                android:id="@+id/tvPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="get place"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="get address"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvLatlng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="get latlng"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnEditProfile"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@color/green"
                android:text="@string/edit_profile"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@color/green"
                android:text="@string/logout"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

    <!--menu-->
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff"
        android:orientation="vertical">

        <Button
            android:id="@+id/menuProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:contentDescription="Profile"
            android:text="Profile" />

        <Button
            android:id="@+id/menuSelectStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:contentDescription="Select Store"
            android:text="Select Store" />

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
