<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.beam.firebaseauth.UserProfileActivity">

    <!--Content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    android:background="@color/green"
    android:layout_margin="10dp">
    <TextView
        android:text="@string/email"
        android:id="@+id/tvUserEmail"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:hint="@string/full_name"
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="30dp"/>

    <EditText
        android:hint="@string/phone_number"
        android:id="@+id/editTextPhoneNumber"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="30dp"/>

    <Button
        android:text="@string/save_information"
        android:id="@+id/btnSaveInfo"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/logout"
        android:id="@+id/btnLogout"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <!--menu-->
    <LinearLayout
        android:layout_gravity="start"
        android:background="#ffffff"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/menuProfile"
            android:text="Profile"
            android:contentDescription="Profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            />
        <Button
            android:id="@+id/menuSelectStore"
            android:text="Select Store"
            android:contentDescription="Select Store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"/>

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
