<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_margin="5dp"

        android:background="@drawable/border_linegreen">


        <ImageView

            android:id="@+id/imStore"

            android:layout_width="100dp"

            android:layout_height="100dp"

            android:layout_margin="5dp"

            android:background="@drawable/border_linewhite"

            android:src="@mipmap/defualtphotos" />


        <LinearLayout

            android:id="@+id/StoreDetail"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/imStore"
            android:orientation="vertical"
            android:paddingHorizontal="5dp"
            android:paddingVertical="3dp">

            <TextView

                android:id="@+id/tvStoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/store_name"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <LinearLayout

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_margin="1dp"

                android:layout_weight="1"

                android:orientation="horizontal">


                <TextView

                    android:id="@+id/tvStoreDay"

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:layout_margin="1dp"

                    android:layout_weight="1"

                    android:text="@string/store_day"

                    android:textColor="@color/green" />


                <TextView

                    android:id="@+id/tvStoreTime"

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:layout_margin="1dp"

                    android:layout_weight="1"

                    android:text="@string/store_time"

                    android:textColor="@color/green" />


            </LinearLayout>


            <TextView

                android:id="@+id/tvStorePhone"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_margin="1dp"

                android:layout_weight="1"

                android:text="@string/store_phone"

                android:textColor="@color/green" />

        </LinearLayout>


        <TextView

            android:id="@+id/tvStoreAddress"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:layout_below="@id/StoreDetail"

            android:layout_margin="10dp"

            android:layout_weight="1"

            android:text="@string/store_address"

            android:textColor="@color/green" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>